# features-extractor-sd3.5

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: compression_strategies.md.resolved  download_scripts.md  feature_extraction.md  text_embedding.md
src/: extract_features.py  extract_text_embedding.py  run_feature_extraction.py
src/download/: __init__.py  download_models.py  download_openfake.py  download_tiny_genimage.py  download_tui.py  openfake_config.py  openfake_download.py  openfake_tui.py
src/download/dataset/: download_echodataset.py  download_genimage.py  download_nanobanana.py  download_openfake.py  download_tiny_genimage.py  download_tui.py  download_unbiased_genimage.py
src/download/dataset/openfake_utils/: openfake_download.py  openfake_tui.py  openfake_verify.py
src/utils/: conditioning.py  features.py  latents.py  model.py  preprocessing.py  sampling.py  system.py
